# team-lens

./: .gitignore  Makefile  README.md  TODO.md
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260430_0001_baseline.py  20260430_0002_team_members.py  20260430_0003_ticket_notes.py  20260430_0004_insights.py  20260501_0005_team_capacity_flag.py
backend/app/: __init__.py  config.py  db.py  main.py  middleware.py
backend/app/api/: routes_epics.py  routes_holidays.py  routes_hygiene.py  routes_insights.py  routes_issues.py  routes_leaderboard.py  routes_leaves.py  routes_metrics.py  routes_people.py  routes_projects.py  routes_setup.py  routes_sprints.py  routes_sync.py  routes_team_members.py  routes_ticket_notes.py
backend/app/insights/: __init__.py  anomalies.py  freshness.py  llm.py  registry.py  retention.py
backend/app/jira/: __init__.py  auth.py  client.py  fields.py  parsers.py
backend/app/metrics/: __init__.py  blockers.py  burnup.py  carry_over.py  epic_risk.py  hygiene.py  leaderboard.py  projects.py  sprint_rollup.py  velocity.py  working_days.py
backend/app/models/: __init__.py  comments.py  epics.py  holidays.py  initiatives.py  insights.py  issue_sprints.py  issues.py  leaves.py  local_settings.py  people.py  project_snapshots.py  scope_change_events.py  sprints.py  sync_runs.py  (+3 more)
backend/scripts/: capture_jira_fixtures.py  seed_holidays.py
backend/tests/: conftest.py  test_jira_client.py  test_projects_freeze.py  test_setup.py  test_snapshots.py  test_sync_transform.py
(+102 files in other folders)
